[gd_scene load_steps=4 format=3 uid="uid://bfm6hxasht1pk"]

[ext_resource type="Script" path="res://scenes/ui/hud/summon_box.gd" id="1_e57cy"]
[ext_resource type="Texture2D" uid="uid://cg5hr4hkq15c" path="res://assets/sprites/ui/Card.png" id="2_jth07"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2rcl"]
bg_color = Color(0.756863, 0.462745, 0.243137, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="SummonBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e57cy")

[node name="Container" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -956.0
offset_top = 2.0
offset_right = -709.0
offset_bottom = 243.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d2rcl")

[node name="SummonLabel" type="Label" parent="Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_right = 70.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Summon (1)"
horizontal_alignment = 1

[node name="TextureBtnBackground" type="TextureButton" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_jth07")
stretch_mode = 0

[node name="TextureRectFriend" type="TextureRect" parent="Container"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 30.0
offset_top = 35.0
offset_right = 150.0
offset_bottom = 157.0
expand_mode = 4

[node name="SummonX" type="Label" parent="Container"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 54.0
offset_top = 161.0
offset_right = -161.0
offset_bottom = 195.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "x"
horizontal_alignment = 1

[node name="SummonCost" type="Label" parent="Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 73.0
offset_top = 161.0
offset_right = -142.0
offset_bottom = 195.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "3"
horizontal_alignment = 1
